fixed flexbox layout issues in about, education, work sections

--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,10 @@ a {
   text-decoration: none;
 }
 
-a:visited {
-  color: inherit;
+.name a:visited,
+.name a {
+  color: rgb(4, 245, 193);
+  text-shadow: 1px 1px 2px #0a0a0a;
 }
 
 h2,
